# OnlineVisualization

./: .gitignore  LICENSE  Makefile  README.md  bridge_shimadzu_spb.py  bridge_shimadzu_xtd.py  multiBridge_shimadzu_spb_tIdDiff.py  pyproject.toml  setup.py
.github/workflows/: build-and-publish.yml
egor/: dynamic_correction.ipynb  flat_pca.ipynb
metro/: baslers.py  metro_info.txt  shimadzu.py
nb/: dynamic_correction.ipynb  flat_pca.ipynb  onNorm_parallel_test3.py  onNorm_parallel_test3.py~  parallel.ipynb  pca_cam3_online.py  pca_flats_cam3.py
onlineVisual_OnNorm/: ADMMCTF.py  dffc_functions_online.py  extra_shimadzusBoth_onNormPhaseRet.py  pca_flats.py  qtplot_Shimadzu_OnNorm_1bridge.py  qtplot_Shimadzus_OnNormPhaseReco_DF_2bridge.py  qtplot_Shimadzus_OnNorm_2bridge.py
onlineVisual_OnNorm/beamtime_specific_scripts/: pca_flats_both.py  pca_flats_cam1.py  pca_flats_cam2.py
qtplot/: qtplot_delay_Zyla_2bridge.py  qtplot_shimadzu2_delayMeanArray_2bridge.py  qtplot_shimadzuAll_MeanArray_3bridge.py  qtplot_shimadzuBoth_MeanArray_2bridge.py  qtplot_shimadzuBoth_MeanMedSum_2bridge.py  qtplot_spectrometer_Zyla.py
qtplot/qt_older/: bridge_zylas.py  multiBridge_shimadzu_xtd_tIdDiff.py
src/dffc/: __init__.py  correction.py  ctotalvar.c  ctotalvar.pyx  draw.py  offline.py  offline.py~  totalvar.c  totalvar_numba.py
src/dffc/__pycache__/: totalvar_numba.grad_totalvar_numba-57.py37m.1.nbc  totalvar_numba.grad_totalvar_numba-57.py37m.nbi  totalvar_numba.totalvar_numba-15.py37m.1.nbc  totalvar_numba.totalvar_numba-15.py37m.nbi
src/dffc/parallel/: __init__.py  mpfarm.py  shmem.py
src/dynflatfield/: __init__.py  batch_processor.py  constants.py  correction.py  draw.py
src/dynflatfield/parallel/: __init__.py  image_reader.py  mpfarm.py  shmem.py
